--- a/styles.css
+++ b/styles.css
@@ -209,6 +209,8 @@ body {
     color: #000000;
     white-space: normal;
     display: block;
+    display: flex;
+    align-items: flex-start;
 }
 
 .phd-info i {
